syntax = "proto3";

package goph_keeper;
import "google/protobuf/empty.proto";

option go_package = "pkg/proto";

service GophKeeper {
  rpc Register(UserData) returns (LoginResult);
  rpc Login(UserData) returns (LoginResult);
  rpc AddLoginPassword(LoginPassword) returns (google.protobuf.Empty);
  rpc AddText(stream Text) returns (google.protobuf.Empty);
  rpc UpdateText(stream Text) returns (google.protobuf.Empty);
  rpc GetText(Key) returns (stream Text);
  rpc DeleteText(Key) returns (google.protobuf.Empty);
  rpc AddBinary(stream Binary) returns (google.protobuf.Empty);
  rpc UpdateBinary(stream Binary) returns (google.protobuf.Empty);
  rpc GetBinary(Key) returns (stream Binary);
  rpc DeleteBinary(Key) returns (google.protobuf.Empty);  
}

message UserData {
  string login = 1;
  string password = 2;
}

message LoginResult {
  string token = 1;
}

message Key {
  string key = 1;
}

message LoginPassword {
  string login = 1;
  string password = 2;
  string meta = 3;
  string key = 4;
}

message Text {
  string data = 1;
  string meta = 2;
  string key = 3;
}

message Binary {
  bytes data = 1;
  string meta = 2;
  string key = 3;
}